# oxai_duckdb_workshop

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
1_sql_and_duckdb/: basics_of_duckdb.ipynb
2_etl_with_duckdb/: duckdb_basics_with_python.ipynb
3_etl_with_duckdb_part_2/: etl_with_duckdb.ipynb  etl_with_duckdb_answers.ipynb
4_introduction_to_ray/: introducing_ray.ipynb
5_etl_with_ray_data/: etl_with_ray_data.ipynb
6_smallpond/: intro_to_smallpond.ipynb
